[package]
name = "rclrust-msg-parse"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuma Hiramatsu <yuma.hiramatsu@gmail.com>",
    "Jerry Lin <jerry73204@gmail.com>",
]

description = "ROS IDL parser for rclrust-msg"
repository = "https://github.com/rclrust/rclrust"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.58"
heck = "0.4.0"
nom = "7.1.1"
regex = "1.5.6"
thiserror = "1.0.31"
itertools = "0.10.3"
path_macro = "1.0.0"
newline-converter = "0.2.0"
convert_case = "0.5.0"

[dev-dependencies]
rclrust-msg-types = { path = "../rclrust-msg-types" }
